<resources>
    <string name="userLogin">https://mock.apifox.cn/m1/1900041-0-default/login</string>
    <string name="app_name">CrowdOS_APP</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">动态</string>
    <string name="title_notifications">用户</string>
    <string name="welcome_page_welcome">开始您的旅途</string>
    <string name="welcome_page_start">start</string>
    <string name="Null"></string>
    <string name="hint_mail">请输入邮箱地址</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_verify">请输入验证码</string>
    <string name="verify_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="committee">确认</string>
    <string name="title">标题</string>
    <string name="description">简介</string>
    <string name="type_of_events">事件类型</string>
    <string name="otto_handsome">使用这个位置</string>
    <string name="upload">上传</string>
    <string name="set_start_time">设置起始时间</string>
    <string name="set_end_time">设置结束时间</string>
    <string name="personal_signature">个性签名</string>
    <string name="username">用户名</string>
    <string name="events_added">他/她上传的事件</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>