<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.crowdos.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.crowdos.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dynamic_follows"/>


    <fragment
        android:id="@+id/dynamic_comment"
        android:name="com.crowdos.ui.dashboard.fragment_Replies"
        android:label="评论"
        tools:layout="@layout/fragment_dynamic_comments"/>

    <fragment
        android:id="@+id/dynamic_emerge"
        android:name="com.crowdos.ui.dashboard.fragment_Urgent"
        android:label="紧急事件"
        tools:layout="@layout/fragment_dynamic_emerge" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.crowdos.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_user" />
</navigation>