<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/user_background" />

    <ImageButton
        android:id="@+id/imageButton3"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:srcCompat="@drawable/button_type"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton4"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:srcCompat="@drawable/button_type"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton5"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/button_type"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton6"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button_type"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton7"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:srcCompat="@drawable/button_type"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="52dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/mainx"
        android:text="@string/title"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="52dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/mainx"
        android:text="@string/description"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="137dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mainx"
        android:text="@string/type_of_events"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mainx"
        android:text="使用当前位置"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="@+id/imageButton4" />

    <TextView
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="152dp"
        android:layout_height="236dp"
        android:layout_marginTop="388dp"
        android:background="@drawable/button_type"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mainx"
        android:text="@string/upload"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="@+id/imageButton5"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mainx"
        android:text="@string/set_start_time"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
        app:layout_constraintStart_toStartOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="@+id/imageButton6" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_type2"
        android:clickable="true"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:srcCompat="@mipmap/upload"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mainx"
        android:text="@string/set_end_time"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton7"
        app:layout_constraintEnd_toEndOf="@+id/imageButton7"
        app:layout_constraintStart_toStartOf="@+id/imageButton7"
        app:layout_constraintTop_toTopOf="@+id/imageButton7" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_type"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/upload_title"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/mainx"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="345dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_type"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="@+id/imageButton5"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@mipmap/cloud" />

    <EditText
        android:id="@+id/upload_description"
        android:layout_width="328dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/mainx"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="4"
        android:maxLines="4"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/mainx"
        android:text="发布照片"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/button_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>