<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/user_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mainx"
        android:text="@string/verify_code"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/button_type"
        android:fontFamily="@font/mainx"
        android:text="@string/register"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@mipmap/welcome_comment" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_type"
        android:text="@string/Null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_type"
        android:text="@string/Null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_type"
        android:text="@string/Null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:srcCompat="@mipmap/email" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.526"
        app:srcCompat="@mipmap/verify_code" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.518"
        app:srcCompat="@mipmap/lock" />

    <ImageView
        android:id="@+id/hide_password_old6"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:src="@drawable/icon_eye"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <EditText
        android:id="@+id/private_change_password_new3"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="11dp"
        android:background="@null"
        android:fontFamily="@font/mainx"
        android:gravity="center_vertical"
        android:hint="请输入你的邮箱"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <EditText
        android:id="@+id/private_change_password_new4"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="11dp"
        android:background="@null"
        android:fontFamily="@font/mainx"
        android:gravity="center_vertical"
        android:hint="请输入验证码"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <EditText
        android:id="@+id/private_change_password_new5"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="11dp"
        android:background="@null"
        android:fontFamily="@font/mainx"
        android:gravity="center_vertical"
        android:hint="请输入密码"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>